--- a/tp-checker.ipynb
+++ b/tp-checker.ipynb
@@ -2,9 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Уведомляю Вас, что по состоянию на 09.01.2023 в 17:25:46 доступ к порталу https://портал-тп.рф функционирует\n",
+      "________________________________\n",
+      ">Форма для ввода логина и пароля: доступно;\n",
+      ">Авторизация: доступно;\n",
+      ">Элементы личного кабинета:\n",
+      " -Заявки и обращения: доступно;\n",
+      " -Опросы: доступно;\n",
+      " -Договоры: доступно;\n",
+      " -Уведомления: доступно;\n",
+      " -История действий: доступно;\n",
+      " -Подписка: доступно;\n",
+      " -Потребление э/э: доступно;\n",
+      ">Калькулятор необходимой мощности: доступно;\n",
+      ">Калькулятор стоимости установки приборов учёта: доступно;\n",
+      ">Калькулятор стоимости дополнительных услуг: доступно;\n"
+     ]
+    }
+   ],
    "source": [
     "#Библиотеки\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
@@ -16,48 +40,28 @@
     "import pandas as pd\n",
     "import requests\n",
     "import datetime\n",
-    "import time \n",
-    "import re \n",
+    "import time\n",
+    "import re\n",
     "\n",
     "#Логирование статуса вебсайта\n",
-    "def logize(num): \n",
-    "    with open(\"./log.txt\",'w') as f:\n",
+    "def logize(num):\n",
+    "    with open(\"C:/Users/eliseev-ae/Desktop/Projects/rpa/rpa_silenium/log.txt\",'w') as f:\n",
     "        pass\n",
     "        f.write(num)\n",
     "\n",
     "#Функция ожидания загрузки страницы 15 секунд\n",
-    "def waitForLoad(inputXPath): \n",
-    "    Wait = WebDriverWait(driver, 15)       \n",
+    "def waitForLoad(inputXPath):\n",
+    "    Wait = WebDriverWait(driver, 15)\n",
     "    Wait.until(EC.element_to_be_clickable((By.XPATH, inputXPath)))\n",
     "\n",
-    "#Считывание статуса предыдущей итерации\n",
-    "log = int(pd.read_csv('./log.txt').columns[0]) \n",
-    "options = webdriver.ChromeOptions()\n",
-    "#options.add_argument('headless')\n",
-    "codec = Service('./yandexdriver.exe')\n",
-    "driver = webdriver.Chrome(service = codec, options=options)\n",
+    "#Функция записи недоступных элементов в массив\n",
+    "def nulled(N):\n",
+    "    for i in range(N):\n",
+    "        history.append(0)\n",
     "\n",
-    "#Подготовка переменных\n",
-    "now = datetime.datetime.now() \n",
-    "day = now.date().strftime(\"%d/%m/%Y\").replace('/', '.')\n",
-    "hour = now.strftime(\"%H:%M:%S\")\n",
-    "url = 'https://портал-тп.рф/platform/portal/tehprisEE_portal'\n",
-    "text_down = f'Уведомляю Вас, что по состоянию на {day} в {hour} доступ к порталу https://портал-тп.рф прекращен'\n",
-    "text_up = f'Уведомляю Вас, что по состоянию на {day} в {hour} доступ к порталу https://портал-тп.рф возобновлен'\n",
-    "tel = 'https://api.telegram.org/bot5815868306:AAE8cNOYy0_kwVv-hthn0rwvVaMzokZMQj8/sendMessage?chat_id=-888382761'\n",
-    "message_down = {'text': text_down}\n",
-    "message_up = {'text': text_up}\n",
-    "history = []\n",
-    "\n",
-    "#Извлечение \n",
-    "status = requests.head(url) \n",
-    "code = int(re.search(r\"\\[([A-Za-z0-9_]+)\\]\", \n",
-    "       str(status))[1])\n",
-    "\n",
-    "#Проверка доступности страницы в целом\n",
-    "if code == 200: \n",
+    "#Функция проверки доступности элементов\n",
+    "def check_elements():\n",
     "    driver.get('https://портал-тп.рф/platform/portal/tehprisEE_portal')\n",
-    "\n",
     "    #Вход в личный кабинет\n",
     "    private_office = driver.find_element('xpath', '//span[@class=\"ui-button-text ui-c\" and contains(text(), \"Личный кабинет\")]')\n",
     "    try:\n",
@@ -65,9 +69,7 @@
     "        history.append(1)\n",
     "    except:\n",
     "        history.append(0)\n",
-    "    \n",
-    "    if history[0] == 1:\n",
-    "\n",
+    "    if history[0] == 1: #Проверка доступности логина\n",
     "        #Авторизация\n",
     "        try:\n",
     "            waitForLoad('//input[@id=\"workplaceTopForm:j_mail_login\"]')\n",
@@ -80,15 +82,13 @@
     "            history.append(1)\n",
     "        except:\n",
     "            history.append(0)\n",
-    "        \n",
-    "        if history[1] == 1:\n",
-    "\n",
-    "            # Элементы личного кабинета\n",
+    "        if history[1] == 1: #Проверка успешности авторизации\n",
+    "            #Элементы личного кабинета\n",
     "            try:\n",
     "                waitForLoad('//button[@id=\"workplaceTopForm:buttonLK\"]')\n",
     "                name_field = driver.find_element('xpath', '//button[@id=\"workplaceTopForm:buttonLK\"]')\n",
     "                name_field.click()\n",
-    "                private_office = driver.find_element('xpath', '//button[@id=\"workplaceTopForm:j_idt1545\"]')\n",
+    "                private_office = driver.find_element('xpath', '//a[@id=\"workplaceTopForm:j_idt661\"]')\n",
     "                private_office.click()\n",
     "                waitForLoad('//a[contains(text(), \"Заявки и обращения\")]')\n",
     "                po_elements = ['//a[contains(text(), \"Заявки и обращения\")]',\n",
@@ -96,81 +96,163 @@
     "                               '//a[contains(text(), \"Договоры\")]',\n",
     "                               '//a[contains(text(), \"Уведомления\")]',\n",
     "                               '//a[contains(text(), \"История действий\")]',\n",
-    "                               '//a[contains(text(), \"Подписка\")]', \n",
-    "                               '//a[contains(text(), \"Потребление э/э\")]']\n",
+    "                               '//a[contains(text(), \"Подписка\")]',\n",
+    "                               '//div[@class=\"metering_tabs\"]']\n",
     "                po_waits = ['//input[@id=\"workplaceForm:messagesProfile:myRARProfile:fromDate_input\"]',\n",
     "                            '//a[contains(text(), \"Результаты опросов\")]',\n",
-    "                            '//div[@class=\"rpp-scroll\"]'\n",
+    "                            '(//li[@value=\"0\"])[2]',\n",
     "                            '//input[@id=\"workplaceForm:messagesProfile:selectedFromUsr_input\"]',\n",
     "                            '//input[@id=\"workplaceForm:messagesProfile:selectedFromAudit_input\"]',\n",
     "                            '//a[@id=\"workplaceForm:messagesProfile:addSuscribeButton\"]',\n",
     "                            '//a[@class=\"ui-link ui-widget link-as-btn\"]']\n",
     "                for i in range(len(po_elements)):\n",
-    "                    private_office_el = driver.find_element('xpath', po_elements[i])\n",
-    "                    private_office_el.click()\n",
-    "                    waitForLoad(po_waits[i])\n",
+    "                    try:\n",
+    "                        private_office_el = driver.find_element('xpath', po_elements[i])\n",
+    "                        private_office_el.click()\n",
+    "                        waitForLoad(po_waits[i])\n",
+    "                        time.sleep(2)\n",
+    "                        history.append(1)\n",
+    "                    except:\n",
+    "                        history.append(0)\n",
     "            except:\n",
-    "                history.append(0)\n",
-    "\n",
-    "\n",
+    "                nulled(num_el-5)\n",
+    "            #Калькуляторы:\n",
+    "            calculators = ['//span[contains(text(), \"Калькулятор необходимой мощности\")]',\n",
+    "                           '//span[contains(text(), \"Калькулятор стоимости установки приборов учёта\")]',\n",
+    "                           '//span[contains(text(), \"Калькулятор стоимости дополнительных услуг\")]']\n",
+    "            calculator_checks = ['//div[@class=\"ui-radiobutton-box ui-widget ui-corner-all ui-state-default\"]',\n",
+    "                                 '//label[@id=\"workplaceForm:calc_regions_label\"]',\n",
+    "                                 '//label[@id=\"workplaceForm:j_idt11178_label\"]']\n",
+    "            for i in range(len(calculators)):\n",
+    "                try:\n",
+    "                    cost_field = driver.find_element('xpath', '//span[@class=\"ui-menuitem-text\" and contains(text(), \"Стоимость\")]')\n",
+    "                    cost_field.click()\n",
+    "                    calculator_type = driver.find_element('xpath', calculators[i])\n",
+    "                    calculator_type.click()\n",
+    "                    waitForLoad(calculator_checks[i])\n",
+    "                    history.append(1)\n",
+    "                    time.sleep(2)\n",
+    "                except:\n",
+    "                    history.append(0)\n",
     "        else:\n",
-    "            for i in range(4):\n",
-    "                history.append(0)\n",
-    "            \n",
-    "    \n",
+    "            nulled(num_el-2)\n",
     "    else:\n",
-    "        for i in range(5):\n",
-    "            history.append(0)\n",
+    "        nulled(num_el-1)\n",
     "\n",
+    "#Функция формирвоания сообщения бота\n",
+    "def bot_message(status, history):\n",
+    "    now = datetime.datetime.now()\n",
+    "    day = now.date().strftime(\"%d/%m/%Y\").replace('/', '.')\n",
+    "    hour = now.strftime(\"%H:%M:%S\")\n",
+    "    add = '\\n' + '________________________________'\n",
+    "    main_text = f'Уведомляю Вас, что по состоянию на {day} в {hour} доступ к порталу https://портал-тп.рф'\n",
     "\n",
+    "    if status == 'down':\n",
+    "        text = main_text + ' прекращён' + add\n",
+    "    elif status == 'up':\n",
+    "        text = main_text + ' возобновлён' + add\n",
+    "    elif status == 'still_down':\n",
+    "        text = main_text + ' отсутствует' + add\n",
+    "    else:\n",
+    "        text = main_text + ' функционирует' + add\n",
     "\n",
-    "# 0: Личный ккабинет\n",
-    "# 1: Авторизация\n",
-    "# 2: Элементы личного кабинета\n",
-    "# 3, 4, 5, 6: калькуляторы\n",
+    "    elements_array = ['>Форма для ввода логина и пароля: ',\n",
+    "                      '>Авторизация: ',\n",
+    "                     #'>Элементы личного кабинета:',\n",
+    "                          ' -Заявки и обращения: ',\n",
+    "                          ' -Опросы: ',\n",
+    "                          ' -Договоры: ',\n",
+    "                          ' -Уведомления: ',\n",
+    "                          ' -История действий: ',\n",
+    "                          ' -Подписка: ',\n",
+    "                          ' -Потребление э/э: ',\n",
+    "                      '>Калькулятор необходимой мощности: ',\n",
+    "                      '>Калькулятор стоимости установки приборов учёта: ',\n",
+    "                      '>Калькулятор стоимости дополнительных услуг: ']\n",
     "\n",
+    "    for i in range(len(history)):\n",
+    "        if i == 1:\n",
+    "            text = text + '\\n' + elements_array[i] +  str(history[i]) + ';' + '\\n' + '>Элементы личного кабинета:'\n",
+    "        else:\n",
+    "            text = text + '\\n' + elements_array[i] + str(history[i]) + ';'\n",
+    "            text = text.replace(': 1', ': доступно').replace(': 0', ': не доступно')\n",
+    "    print(text)\n",
     "\n",
+    "#Функция повторения проверки\n",
+    "def check_elements_again():\n",
+    "    history = []\n",
+    "    time.sleep(300)\n",
+    "    check_elements()\n",
     "\n",
+    "#Считывание статуса предыдущей итерации\n",
+    "log = int(pd.read_csv('C:/Users/eliseev-ae/Desktop/Projects/rpa/rpa_silenium/log.txt').columns[0])\n",
+    "options = webdriver.ChromeOptions()\n",
+    "#options.add_argument('headless')\n",
+    "codec = Service('C:/Users/eliseev-ae/Desktop/Projects/rpa/rpa_silenium/yandexdriver.exe')\n",
+    "driver = webdriver.Chrome(service = codec, options=options)\n",
     "\n",
+    "#Подготовка переменных\n",
+    "num_el = 12\n",
+    "url = 'https://портал-тп.рф/platform/portal/tehprisEE_portal'\n",
+    "tel = 'https://api.telegram.org/bot5815868306:AAE8cNOYy0_kwVv-hthn0rwvVaMzokZMQj8/sendMessage?chat_id=-888382761'\n",
+    "history = []\n",
     "\n",
+    "#Извлечение\n",
+    "status = requests.head(url)\n",
+    "code = int(re.search(r\"\\[([A-Za-z0-9_]+)\\]\",\n",
+    "       str(status))[1])\n",
     "\n",
-    "\n",
-    "\n",
-    "        if log == 0: \n",
-    "            resp = requests.post(tel, data = message_up)\n",
-    "            logize('1')\n",
+    "#Проверка доступности страницы и её элементов\n",
+    "if code == 200:\n",
+    "    check_elements()\n",
+    "    if (sum(history[0:2]) == 2) & (sum(history[2::]) == 0): #на случай моментного сбоя:\\\n",
+    "        try:\n",
+    "            check_elements_again() #задержка 5 минут\n",
+    "        except:\n",
+    "            bot_message('down', history)\n",
+    "            logize('0')\n",
+    "    if log == 0:\n",
+    "        bot_message('up', history)\n",
+    "        logize('1')\n",
+    "    else:\n",
+    "        bot_message('still_up', history)\n",
     "else:\n",
     "    if log == 1:\n",
-    "        resp = requests.post(tel, data = message_down)\n",
-    "        logize('0')"
+    "        bot_message('down', history)\n",
+    "        logize('0')\n",
+    "    else:\n",
+    "        bot_message('still_down', history)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "ed14105c283048215b90eebb0308c1c94c02c820053a746f5a616db873ecb7ab"
-   }
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
