--- a/tp-checker.ipynb
+++ b/tp-checker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -11,21 +11,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Уведомляю Вас, что по состоянию на 09.01.2023 в 17:25:46 доступ к порталу https://портал-тп.рф функционирует\n",
+      "dfdf\n",
+      "Уведомляю Вас, что по состоянию на 10.01.2023 в 12:34:50 доступ к порталу https://портал-тп.рф функционирует\n",
       "________________________________\n",
       ">Форма для ввода логина и пароля: доступно;\n",
       ">Авторизация: доступно;\n",
       ">Элементы личного кабинета:\n",
-      " -Заявки и обращения: доступно;\n",
-      " -Опросы: доступно;\n",
-      " -Договоры: доступно;\n",
-      " -Уведомления: доступно;\n",
-      " -История действий: доступно;\n",
-      " -Подписка: доступно;\n",
-      " -Потребление э/э: доступно;\n",
+      " -Заявки и обращения: не доступно;\n",
+      " -Опросы: не доступно;\n",
+      " -Договоры: не доступно;\n",
+      " -Уведомления: не доступно;\n",
+      " -История действий: не доступно;\n",
+      " -Подписка: не доступно;\n",
+      " -Потребление э/э: не доступно;\n",
       ">Калькулятор необходимой мощности: доступно;\n",
       ">Калькулятор стоимости установки приборов учёта: доступно;\n",
-      ">Калькулятор стоимости дополнительных услуг: доступно;\n"
+      ">Калькулятор стоимости дополнительных услуг: не доступно;\n"
      ]
     }
    ],
@@ -45,7 +46,7 @@
     "\n",
     "#Логирование статуса вебсайта\n",
     "def logize(num):\n",
-    "    with open(\"C:/Users/eliseev-ae/Desktop/Projects/rpa/rpa_silenium/log.txt\",'w') as f:\n",
+    "    with open(\"./log.txt\",'w') as f:\n",
     "        pass\n",
     "        f.write(num)\n",
     "\n",
@@ -61,7 +62,7 @@
     "\n",
     "#Функция проверки доступности элементов\n",
     "def check_elements():\n",
-    "    driver.get('https://портал-тп.рф/platform/portal/tehprisEE_portal')\n",
+    "    driver.get(url)\n",
     "    #Вход в личный кабинет\n",
     "    private_office = driver.find_element('xpath', '//span[@class=\"ui-button-text ui-c\" and contains(text(), \"Личный кабинет\")]')\n",
     "    try:\n",
@@ -74,9 +75,9 @@
     "        try:\n",
     "            waitForLoad('//input[@id=\"workplaceTopForm:j_mail_login\"]')\n",
     "            login_field = driver.find_element('xpath', '//input[@id=\"workplaceTopForm:j_mail_login\"]')\n",
-    "            login_field.send_keys('arselisak@gmail.com')\n",
+    "            login_field.send_keys('211714@edu.fa.ru')\n",
     "            password_field = driver.find_element('xpath', '//input[@id=\"workplaceTopForm:j_password\"]')\n",
-    "            password_field.send_keys('SeleniumTest23!')\n",
+    "            password_field.send_keys('Test1234!')\n",
     "            login_button = driver.find_element('xpath', '//button[@id=\"workplaceTopForm:loginBtn\"]')\n",
     "            login_button.click()\n",
     "            history.append(1)\n",
@@ -185,10 +186,10 @@
     "    check_elements()\n",
     "\n",
     "#Считывание статуса предыдущей итерации\n",
-    "log = int(pd.read_csv('C:/Users/eliseev-ae/Desktop/Projects/rpa/rpa_silenium/log.txt').columns[0])\n",
+    "log = int(pd.read_csv('./log.txt').columns[0])\n",
     "options = webdriver.ChromeOptions()\n",
     "#options.add_argument('headless')\n",
-    "codec = Service('C:/Users/eliseev-ae/Desktop/Projects/rpa/rpa_silenium/yandexdriver.exe')\n",
+    "codec = Service('./yandexdriver.exe')\n",
     "driver = webdriver.Chrome(service = codec, options=options)\n",
     "\n",
     "#Подготовка переменных\n",
@@ -203,35 +204,28 @@
     "       str(status))[1])\n",
     "\n",
     "#Проверка доступности страницы и её элементов\n",
-    "if code == 200:\n",
-    "    check_elements()\n",
-    "    if (sum(history[0:2]) == 2) & (sum(history[2::]) == 0): #на случай моментного сбоя:\\\n",
-    "        try:\n",
-    "            check_elements_again() #задержка 5 минут\n",
-    "        except:\n",
+    "for i in range(1):\n",
+    "    if code == 200:\n",
+    "        check_elements()\n",
+    "        if (sum(history[0:2]) == 2) & (sum(history[2::]) == 0): #на случай моментного сбоя\n",
+    "            try:\n",
+    "                check_elements_again() #задержка 5 минут\n",
+    "            except:\n",
+    "                bot_message('down', history)\n",
+    "                logize('0')\n",
+    "                break\n",
+    "        if log == 0:\n",
+    "            bot_message('up', history)\n",
+    "            logize('1')\n",
+    "        else:\n",
+    "            bot_message('still_up', history)\n",
+    "    else:\n",
+    "        if log == 1:\n",
     "            bot_message('down', history)\n",
     "            logize('0')\n",
-    "    if log == 0:\n",
-    "        bot_message('up', history)\n",
-    "        logize('1')\n",
-    "    else:\n",
-    "        bot_message('still_up', history)\n",
-    "else:\n",
-    "    if log == 1:\n",
-    "        bot_message('down', history)\n",
-    "        logize('0')\n",
-    "    else:\n",
-    "        bot_message('still_down', history)"
+    "        else:\n",
+    "            bot_message('still_down', history)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
   }
  ],
  "metadata": {
