--- a/tp-checker.ipynb
+++ b/tp-checker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -11,22 +11,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dfdf\n",
-      "Уведомляю Вас, что по состоянию на 10.01.2023 в 12:34:50 доступ к порталу https://портал-тп.рф функционирует\n",
+      "Уведомляю Вас, что по состоянию на 10.01.2023 в 14:45:55 доступ к порталу https://портал-тп.рф функционирует\n",
       "________________________________\n",
       ">Форма для ввода логина и пароля: доступно;\n",
       ">Авторизация: доступно;\n",
       ">Элементы личного кабинета:\n",
-      " -Заявки и обращения: не доступно;\n",
-      " -Опросы: не доступно;\n",
-      " -Договоры: не доступно;\n",
-      " -Уведомления: не доступно;\n",
-      " -История действий: не доступно;\n",
-      " -Подписка: не доступно;\n",
-      " -Потребление э/э: не доступно;\n",
+      " -Заявки и обращения: доступно;\n",
+      " -Опросы: доступно;\n",
+      " -Договоры: доступно;\n",
+      " -Уведомления: доступно;\n",
+      " -История действий: доступно;\n",
+      " -Подписка: доступно;\n",
+      " -Потребление э/э: доступно;\n",
       ">Калькулятор необходимой мощности: доступно;\n",
       ">Калькулятор стоимости установки приборов учёта: доступно;\n",
-      ">Калькулятор стоимости дополнительных услуг: не доступно;\n"
+      ">Калькулятор стоимости дополнительных услуг: доступно;\n"
      ]
     }
    ],
@@ -195,7 +194,7 @@
     "#Подготовка переменных\n",
     "num_el = 12\n",
     "url = 'https://портал-тп.рф/platform/portal/tehprisEE_portal'\n",
-    "tel = 'https://api.telegram.org/bot5815868306:AAE8cNOYy0_kwVv-hthn0rwvVaMzokZMQj8/sendMessage?chat_id=-888382761'\n",
+    "tel = 'https://api.telegram.org/https://t.me/RD_Zabbix_bot/sendMessage?chat_id=-621157789'\n",
     "history = []\n",
     "\n",
     "#Извлечение\n",
