--- a/application_filler/application_filler.ipynb
+++ b/application_filler/application_filler.ipynb
@@ -2,21 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "brytkova-tn\n",
-      "sergienko-dv\n"
+      "application_filler – application_filler.ipynb\n",
+      "Obtain Active window using Python - Stack Overflow — Яндекс Браузер\n"
      ]
     }
    ],
    "source": [
     "#Импорт библиотек\n",
     "from transliterate import translit\n",
+    "from win32gui import GetWindowText, GetForegroundWindow\n",
     "import win32com.client\n",
+    "import pyautogui\n",
     "#import random\n",
     "\n",
     "class text_inst():\n",
@@ -26,6 +28,14 @@
     "            if c.isdigit():\n",
     "                return i\n",
     "                break\n",
+    "text = text_inst()\n",
+    "\n",
+    "class key_inst():\n",
+    "    #Функция повторения нажатия клавиш\n",
+    "    def cycle_key(self, count, key):\n",
+    "        for i in range(count):\n",
+    "            pyautogui.press(key)\n",
+    "key = key_inst()\n",
     "\n",
     "#Выделение строчек из письма\n",
     "strings = []\n",
@@ -46,10 +56,10 @@
     "        strings.append(string)\n",
     "\n",
     "#Формирование текстовых полей для заполнения\n",
-    "symbols = ['!', '#', '$', '%', '+', '&', '@']\n",
-    "for string in strings:\n",
+    "#symbols = ['!', '#', '$', '%', '+', '&', '@']\n",
+    "for k, string in enumerate(strings):\n",
     "    string =  string[50:]\n",
-    "    date_start = text_inst().number_pos(string)\n",
+    "    date_start = text().number_pos(string)\n",
     "    fio = string[:date_start]\n",
     "    surname, name, patronymic = fio.split()\n",
     "    birth = string[len(string)-10::]\n",
@@ -64,29 +74,21 @@
     "    #random_num = random.randint(1000,9999)\n",
     "    #random_symbol = random.choice(symbols)\n",
     "    #password = login_base.capitalize() + str(random_num) + random_symbol\n",
-    "    password = 'Zaq123456&'"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'C:\\\\Users\\\\eliseev-ae\\\\Anaconda3'"
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import sys\n",
-    "os.path.dirname(sys.executable)"
+    "    password = 'Zaq123456&'\n",
+    "\n",
+    "    #Заполнение формы\n",
+    "    print (GetWindowText(GetForegroundWindow()))\n",
+    "    if k == 0:\n",
+    "        key.cycle_key(200, 'up')\n",
+    "        key.cycle_key(2, 'down')\n",
+    "        pyautogui.press('clear')\n",
+    "        pyautogui.press('add')\n",
+    "        key.cycle_key(17, 'down')\n",
+    "        pyautogui.press('add')\n",
+    "        key.cycle_key(9, 'down')\n",
+    "        pyautogui.hotkey('shift', 'f10')\n",
+    "        key.cycle_key(4, 'down')\n",
+    "        key.cycle_key(2, 'enter')"
    ],
    "metadata": {
     "collapsed": false
