--- a/application_filler/application_filler.ipynb
+++ b/application_filler/application_filler.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "class key_inst():\n",
     "    #Функция повторения нажатия клавиш\n",
-    "    def cycle_key(self, count, key):\n",
+    "    def cycle(self, count, key):\n",
     "        for i in range(count):\n",
     "            pyautogui.press(key)\n",
     "key = key_inst()\n",
@@ -59,7 +59,7 @@
     "#symbols = ['!', '#', '$', '%', '+', '&', '@']\n",
     "for k, string in enumerate(strings):\n",
     "    string =  string[50:]\n",
-    "    date_start = text().number_pos(string)\n",
+    "    date_start = text.number_pos(string)\n",
     "    fio = string[:date_start]\n",
     "    surname, name, patronymic = fio.split()\n",
     "    birth = string[len(string)-10::]\n",
@@ -79,26 +79,17 @@
     "    #Заполнение формы\n",
     "    print (GetWindowText(GetForegroundWindow()))\n",
     "    if k == 0:\n",
-    "        key.cycle_key(200, 'up')\n",
-    "        key.cycle_key(2, 'down')\n",
+    "        key.cycle(200, 'up')\n",
+    "        key.cycle(2, 'down')\n",
     "        pyautogui.press('clear')\n",
     "        pyautogui.press('add')\n",
-    "        key.cycle_key(17, 'down')\n",
+    "        key.cycle(17, 'down')\n",
     "        pyautogui.press('add')\n",
-    "        key.cycle_key(9, 'down')\n",
+    "        key.cycle(9, 'down')\n",
     "        pyautogui.hotkey('shift', 'f10')\n",
-    "        key.cycle_key(4, 'down')\n",
-    "        key.cycle_key(2, 'enter')"
+    "        key.cycle(4, 'down')\n",
+    "        key.cycle(2, 'enter')"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
